# ai_complier_project_and_tutorial

./: CMakeLists.txt  README.md  requirements.txt  todo.md
docs/: INSTALL.md
docs/tutorials/: 01_dsl_specification.md  02_frontend_tutorial.md  03_ir_tutorial.md  04_graph_optimization_tutorial.md  05_llvm_backend_tutorial.md
examples/advanced/: cnn.dsl
examples/basic/: mlp.dsl
src/backend/include/: llvm_backend.h
src/backend/src/: llvm_backend.cpp
src/frontend/: ast.cpp  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/ir/include/: ast_to_ir.h  ir.h
src/ir/src/: ast_to_ir.cpp
src/optimizer/include/: optimization_passes.h  pass.h
src/optimizer/src/: optimization_passes.cpp  pass.cpp
src/runtime/: runtime.cpp
tests/unit/: backend_tests.cpp  frontend_tests.cpp  ir_tests.cpp  optimizer_tests.cpp
